--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,16 +32,24 @@ flutter:
   #   - asset/lottie/
   #   - asset/icon/
 
-  # fonts:
-  #   - family: Montserrat
-  #     fonts:
-  #       - asset: fonts/Montserrat/Montserrat-Black.ttf
-  #   - family: Pretendard
-  #     fonts:
-  #       - asset: fonts/Pretendard/Pretendard-Regular.ttf
-  #         weight: 400
-  #       - asset: fonts/Pretendard/Pretendard-Medium.ttf
-  #         weight: 500
-  #       - asset: fonts/Pretendard/Pretendard-SemiBold.ttf
-  #         weight: 600
-  #       - asset: fonts/Pretendard/Pretendard-Bold.ttf
+  fonts:
+    - family: SUIT
+      fonts:
+        - asset: assets/fonts/SUIT-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/SUIT-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/SUIT-Light.ttf
+          weight: 300
+        - asset: assets/fonts/SUIT-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/SUIT-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/SUIT-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/SUIT-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/SUIT-ExtraBold.ttf
+          weight: 800
+        - asset: fonts/SUIT-Black.ttf
+          weight: 900
