--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: dimipay_pos_flutter
-description: "A new Flutter project."
+description: "Dimipay POS"
 
 # Prevent accidental publishing to pub.dev.
 publish_to: 'none'
@@ -13,16 +13,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   get: ^4.6.6
-  flutter_dotenv: ^5.1.0
-  google_sign_in: ^6.2.1
-  dio: ^5.4.0
-  flutter_secure_storage: ^9.0.0
-  uuid: ^4.3.3
-  jwt_decoder: ^2.0.1
+  flutter_svg: ^2.0.9
   dimipay_design_kit: ^0.1.0
   material_symbols_icons: ^4.2716.0
 
@@ -38,7 +30,7 @@ flutter:
 
   assets:
     - assets/fonts/
-  #   - asset/images/
+    - assets/images/
   #   - asset/lottie/
   #   - asset/icon/
 
