--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   flutter_svg: ^2.0.9
   dimipay_design_kit: ^0.1.0
   material_symbols_icons: ^4.2716.0
+  dio: ^5.4.0
+  jwt_decode: ^0.3.1
 
 
 dev_dependencies:
