--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   material_symbols_icons: ^4.2716.0
   dio: ^5.4.0
   jwt_decode: ^0.3.1
+  flutter_secure_storage: ^9.0.0
 
 
 dev_dependencies:
