--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   material_symbols_icons: ^4.2716.0
   dio: ^5.4.0
   jwt_decode: ^0.3.1
+  json_annotation: ^4.8.1
   flutter_secure_storage: ^9.0.0
 
 
@@ -27,6 +28,8 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^3.0.1
+  build_runner: ^2.4.8
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
