--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   get: ^4.6.6
   dio: ^5.4.0
   camera: ^0.10.5+9
+  lottie: ^3.1.0
   jwt_decode: ^0.3.1
   flutter_svg: ^2.0.9
   json_annotation: ^4.8.1
