--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   lottie: ^3.1.0
   jwt_decode: ^0.3.1
   flutter_svg: ^2.0.9
+  http_parser: ^4.0.2
   dimipay_design_kit: ^0.1.0
   flutter_secure_storage: ^9.0.0
   material_symbols_icons: ^4.2716.0
@@ -36,6 +37,7 @@ flutter:
   assets:
     - assets/fonts/
     - assets/images/
+    - assets/images/multi_test_face.jpeg
 
   fonts:
     - family: SUITv1
