--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   dimipay_design_kit: ^0.1.0
   flutter_secure_storage: ^9.0.0
   material_symbols_icons: ^4.2716.0
+  encrypt: ^5.0.3
 
 
 dev_dependencies:
