--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   material_symbols_icons: ^4.2716.0
   encrypt: ^5.0.3
+  fast_rsa: ^3.6.1
 
 
 dev_dependencies:
