--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   material_symbols_icons: ^4.2716.0
   encrypt: ^5.0.3
   fast_rsa: ^3.6.1
+  cryptography: ^2.7.0
 
 
 dev_dependencies:
