--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   lottie: ^3.1.0
   fast_rsa: ^3.6.1
   jwt_decode: ^0.3.1
-  flutter_svg: ^2.0.9
+  flutter_svg: ^2.0.10+1
   http_parser: ^4.0.2
   cryptography: ^2.7.0
   dimipay_design_kit: ^0.1.0
@@ -39,6 +39,7 @@ flutter:
   assets:
     - assets/fonts/
     - assets/images/
+    - assets/images/cards/
 
   fonts:
     - family: SUITv1
