--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   dio: ^5.4.0
   camera: ^0.10.5+9
   lottie: ^3.1.0
+  popover: ^0.3.0+1
   fast_rsa: ^3.6.1
   jwt_decode: ^0.3.1
   flutter_svg: ^2.0.10+1
@@ -25,7 +26,7 @@ dependencies:
   dimipay_design_kit: ^0.1.0
   flutter_secure_storage: ^9.0.0
   material_symbols_icons: ^4.2716.0
-  popover: ^0.3.0+1
+  convert_native_img_stream: ^0.0.1
 
 
 dev_dependencies:
