--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,17 +17,12 @@ dependencies:
   dio: ^5.4.0
   camera: ^0.10.5+9
   lottie: ^3.1.0
-  popover: ^0.3.0+1
-  fast_rsa: ^3.6.1
-  jwt_decode: ^0.3.1
   flutter_svg: ^2.0.10+1
-  http_parser: ^4.0.2
-  cryptography: ^2.7.0
-  dimipay_design_kit: ^0.1.0
-  flutter_secure_storage: ^9.0.0
-  material_symbols_icons: ^4.2716.0
-  convert_native_img_stream: ^0.0.1
-
+  dimipay_design_kit:
+    git:
+      url: https://github.com/dimipay/dimipay_design_kit.git
+      ref: main
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
