--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,19 @@ dependencies:
       url: https://github.com/dimipay/dimipay_design_kit.git
       ref: main
   intl: ^0.19.0
+  flutter_secure_storage: ^9.2.2
+  cryptography: ^2.7.0
+  fast_rsa: ^3.6.4
+  jwt_decoder: ^2.0.1
+  uuid: ^4.4.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^3.0.1
+  build_runner: ^2.4.12
+  json_serializable: ^6.8.0
 
 flutter:
   uses-material-design: true
