--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   fast_rsa: ^3.6.4
   jwt_decoder: ^2.0.1
   uuid: ^4.4.2
+  hive_flutter: ^1.1.0
+  hive: ^2.2.3
 
 dev_dependencies:
   flutter_test:
