--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   archive: ^3.6.1
   popover: ^0.3.1
   image: ^4.2.0
+  convert_native_img_stream: ^0.0.1
 
 dev_dependencies:
   flutter_test:
