--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   json_annotation: any
   http_parser: any
   audioplayers: ^6.1.0
+  flutter_dotenv: ^5.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -54,6 +55,7 @@ flutter:
     - assets/images/
     - assets/images/cards/
     - assets/audio/
+    - env/
 
   fonts:
     - family: SUITv1
